--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  syncfusion_flutter_charts: ^20.2.38
+  table_calendar: ^3.0.6
+
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this
 assets:
     - images/check-correct.gif
+    - images/summary.gif
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
